# light-note

./: .gitignore  CMakeLists.txt
data_managment/abstract/: data.h  data_interface.h
data_managment/datafile/: CMakeLists.txt  datafile.h
data_managment/file_service/: CMakeLists.txt
data_managment/file_service/manager/: file_manager.cpp  file_manager.h
data_managment/gateway_data/: CMakeLists.txt  gateway_data.cpp  gateway_data.h
datafile/: CMakeLists.txt  datafile.cpp
gateway_data/: CMakeLists.txt  gateway_data.cpp  gateway_data.h
main/: CMakeLists.txt  main.cpp
tests/datafile_tests/: CMakeLists.txt  example.cpp
tests/file_service_tests/: CMakeLists.txt  example.cpp
tests/gateway_data_tests/: CMakeLists.txt  example.cpp
